--- a/setup.cfg
+++ b/setup.cfg
@@ -1,27 +1,60 @@
 [flake8]
-exclude = .git,__pycache__,__init__.py,README.md,/venv
-max_line_length = 119
-max_complexity = 8
-extend-select = B950
-extend-ignore = E203,E501,E701
+count=true
+statistics=true
+show-source=true
+max-line-length = 79
+exclude = [.venv]
+docstring-convention = pep257
+ignore =
+    # A002 argument "object" is shadowing a python builtin
+    A002,
+    # A003 class attribute "id" is shadowing a python builtin
+    A003,
+    # A005 A module is shadowing a Python builtin module
+    A005,
+    # D100 Missing docstring in public module
+    D100,
+    # D101 Missing docstring in public class
+    D101,
+    # D102 Missing docstring in public method
+    D102,
+    # D103 Missing docstring in public function
+    D103,
+    # D104 Missing docstring in public package
+    D104,
+    # D105 Missing docstring in magic method
+    D105,
+    # D107 Missing docstring in __init__
+    D107,
+    # W504 line break after binary operator
+    W504
+
+max-cognitive-complexity = 10
+max-complexity = 10
+per-file-ignores =
+    tests/**:D1,E800,A003,
+    **/__init__.py:F401
+
 
 [mypy]
-ignore_missing_imports = True
-disable_error_code = import-untyped,import-not-found
+ignore_missing_imports = true
+disable_error_code = 
+    import-untyped,
+    import-not-found
 
-[mypy-tests.*]
-ignore_errors = True
-
-[tool.black]
-line-length = 119
-target-version = ['py311']
-include = '\.pyi?$'
 
 [tool.isort]
 profile = "black"
-line_length = 119
+line_length = 79
 lines_after_imports = 2
 multi_line_output = 3
 include_trailing_comma = true
 use_parentheses = true
 ensure_newline_before_comments = true
+
+
+[tool.black]
+line-length = 79
+target-version = ['py311']
+include = '\.pyi?$'
+skip_magic_trailing_comma = false
